# 3DMetricTools

./: 3DMetricTools.cmake  CMakeLists.txt  Common.cmake  README.md  SuperBuild.cmake
3DMeshMetric/: CMakeLists.txt  dataM.cxx  display.cxx  meshMetricGui.cxx  processing.cxx
3DMeshMetric/Testing/: testData.cxx
Doc/: HowToCompile.txt
Libraries/: CMakeLists.txt
Libraries/MeshValmet/: model_in.cxx
ModelToModelDistance/: CMakeLists.txt  ModelToModelDistance.cxx  ModelToModelDistance.xml  ModelToModelDistanceMeshValmet.xml.in  ModelToModelDistanceVTK.xml.in  vtkDistancePolyDataFilter_m.cxx  vtkDistancePolyDataFilter_m.h  vtkImplicitPolyDataDistance_m.cxx  vtkImplicitPolyDataDistance_m.h
SuperBuild/: External_ITKv4.cmake  External_SlicerExecutionModel.cmake  External_VTK.cmake
Testing/: CMakeLists.txt  vtkTestMain.h
Testing/Data/Baseline/: results.vtk.md5  sphere_distance.vtk.md5
Testing/Data/Input/: model1.vtk.md5  model2.vtk.md5  sphere.vtk.md5
